[PAY-440] Fix descenders in artist name on tip modal cut off (#1617)

--- a/packages/web/src/components/profile-info/ProfileInfo.module.css
+++ b/packages/web/src/components/profile-info/ProfileInfo.module.css
@@ -72,7 +72,7 @@
 .accountWrapper .userInfoWrapper .handleContainer {
   display: inline-flex;
   overflow: hidden;
-  line-height: 14px;
+  line-height: 18px;
   padding-right: 4px;
 }
 
